--- a/APM-Start/src/app/products/product-list.component.html
+++ b/APM-Start/src/app/products/product-list.component.html
@@ -1,6 +1,6 @@
 <div class='card'>
+    <div  class='card-header'>{{pageTitle}}</div>
     <div class='card-body'>
-        {{pageTitle}}
         <div class='row'>
             <div class='col-md-2'>Filter by:</div>
             <div class='col-md-4'>
